Imported from https://vgadad27@github.com/vgadad27/NewRepoForGerrit.git

--- a/project.config
+++ b/project.config
@@ -1,4 +1,21 @@
 [access]
 	inheritFrom = All-Projects
 [submit]
-	action = inherit
+[access "refs/*"]
+	owner = group user/vgadad27
+[access "refs/for/refs/*"]
+	label-Code-Review = -2..+2 group user/vgadad27
+	label-Verified = -1..+1 group user/vgadad27
+	push = group user/vgadad27
+	read = group user/vgadad27
+	rebase = group user/vgadad27
+	removeReviewer = group user/vgadad27
+	submit = group user/vgadad27
+[access "refs/heads/*"]
+	create = group user/vgadad27
+	push = +force group user/vgadad27
+	pushMerge = group user/vgadad27
+	read = group user/vgadad27
+[access "refs/tags/*"]
+	push = group user/vgadad27
+	push = +force group user/vgadad27
